tests/ui/parser/column-offset-1-based.rs
# //~ ERROR expected one of `!` or `[`, found `<eof>`

// ferrocene-annotations: fls_s35hob3i7lr
// Source Files
